our last touches for the project with Emre.
model notebooks are separated and well designed
data part is designed
last checks are made

--- a/notebooks/calendar_generator.ipynb
+++ b/notebooks/calendar_generator.ipynb
@@ -4,10 +4,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Calendar Generator - Hungary Detailed Calendar\n",
+    "# Calendar Generator - Hungary Detailed Calendar Features\n",
     "\n",
-    "Demand forecasting için Macaristan'a özel detaylı takvim özellikleri oluşturur.\n",
-    "15 dakikalık çözünürlükte, UTC formatında."
+    "## Overview\n",
+    "\n",
+    "This notebook generates comprehensive calendar features for Hungary that are essential for electricity load forecasting. Calendar features capture regular patterns (daily, weekly, seasonal) and special events (holidays, weekends) that significantly influence electricity consumption.\n",
+    "\n",
+    "### Feature Categories\n",
+    "\n",
+    "1. **Cyclic Features**: Sinusoidal encodings for hour, day of week, month, day of year (captures cyclical patterns)\n",
+    "2. **Binary Features**: Flags for weekends, holidays, workdays, peak hours, school holidays, etc.\n",
+    "3. **One-Hot Encoded Features**: Day type (weekday, weekend, holiday, Monday), season indicators\n",
+    "4. **Special Events**: Bridge days, paydays, national holidays, Christmas period\n",
+    "\n",
+    "### Temporal Resolution\n",
+    "\n",
+    "- **Resolution**: 15-minute intervals\n",
+    "- **Timezone**: UTC (Coordinated Universal Time)\n",
+    "- **Period**: 2015-2024\n",
+    "\n",
+    "### Hungary-Specific Features\n",
+    "\n",
+    "- Public holidays for Hungary\n",
+    "- Business hours (8:00-18:00 local time)\n",
+    "- School holiday periods\n",
+    "- National day (August 20 - St. Stephen's Day)\n",
+    "- Payday patterns (typically mid-month and end-of-month)\n",
+    "\n",
+    "These features help the model understand when electricity demand is likely to be higher or lower due to human activity patterns."
    ]
   },
   {
@@ -54,13 +78,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Generator Oluştur"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -82,13 +99,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Tarih Aralığını Belirle"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -105,14 +115,7 @@
     "start_date = datetime(2015, 1, 1)\n",
     "end_date = datetime(2024, 12, 31)\n",
     "\n",
-    "print(f\"Takvim oluşturulacak tarih aralığı: {start_date.date()} - {end_date.date()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Takvim Oluştur"
+    "print(f\"Takvim generateulacak tarih aralığı: {start_date.date()} - {end_date.date()}\")"
    ]
   },
   {
@@ -133,15 +136,8 @@
     }
    ],
    "source": [
-    "# Detaylı takvim özelliklerini oluştur\n",
+    "# Detaylı calendar özelliklerini generate\n",
     "calendar_df = generator.generate_calendar(start_date, end_date)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Takvim Verisini İncele"
    ]
   },
   {
@@ -217,8 +213,8 @@
    "source": [
     "print(\"\\n📅 Takvim Verisi:\")\n",
     "print(calendar_df.head(10))\n",
-    "print(f\"\\nToplam kayıt sayısı: {len(calendar_df):,}\")\n",
-    "print(f\"Tarih aralığı: {calendar_df['datetime'].min()} - {calendar_df['datetime'].max()}\")\n",
+    "print(f\"\\nToplam rows sayısı: {len(calendar_df):,}\")\n",
+    "print(f\"Date range: {calendar_df['datetime'].min()} - {calendar_df['datetime'].max()}\")\n",
     "print(f\"\\nToplam sütun sayısı: {len(calendar_df.columns)}\")\n",
     "print(f\"\\nSütunlar: {list(calendar_df.columns)}\")"
    ]
@@ -269,36 +265,29 @@
    "source": [
     "# Özellik istatistikleri\n",
     "print(\"\\n📊 Özellik İstatistikleri:\")\n",
-    "print(f\"\\nHafta sonu günleri: {calendar_df['is_weekend'].sum():,} kayıt\")\n",
-    "print(f\"Tatil günleri: {calendar_df['is_holiday'].sum():,} kayıt\")\n",
-    "print(f\"İş günleri: {calendar_df['is_workday'].sum():,} kayıt\")\n",
-    "print(f\"İş saatleri: {calendar_df['is_work_hour'].sum():,} kayıt\")\n",
-    "print(f\"Öğle yemeği saatleri: {calendar_df['is_lunch_hour'].sum():,} kayıt\")\n",
-    "print(f\"Akşam piki saatleri: {calendar_df['is_peak_hour'].sum():,} kayıt\")\n",
-    "print(f\"Off-peak saatleri: {calendar_df['is_off_peak_hour'].sum():,} kayıt\")\n",
-    "print(f\"Shoulder saatleri: {calendar_df['is_shoulder_hour'].sum():,} kayıt\")\n",
-    "print(f\"Okul tatili günleri: {calendar_df['is_school_holiday'].sum():,} kayıt\")\n",
-    "print(f\"\\nTatil öncesi günler: {calendar_df['before_holiday_1day'].sum():,} kayıt\")\n",
-    "print(f\"Tatil sonrası günler: {calendar_df['after_holiday_1day'].sum():,} kayıt\")\n",
-    "print(f\"Bridge günler: {calendar_df['is_bridge_day'].sum():,} kayıt\")\n",
-    "print(f\"Ödeme günleri: {calendar_df['is_payday'].sum():,} kayıt\")\n",
-    "print(f\"Yılbaşı dönemi: {calendar_df['christmas_period'].sum():,} kayıt\")\n",
-    "print(f\"20 Ağustos (Aziz Stephen): {calendar_df['natl_day_peak_20Aug'].sum():,} kayıt\")\n",
+    "print(f\"\\nHafta sonu günleri: {calendar_df['is_weekend'].sum():,} rows\")\n",
+    "print(f\"Holiday günleri: {calendar_df['is_holiday'].sum():,} rows\")\n",
+    "print(f\"İş günleri: {calendar_df['is_workday'].sum():,} rows\")\n",
+    "print(f\"İş saatleri: {calendar_df['is_work_hour'].sum():,} rows\")\n",
+    "print(f\"Öğle yemeği saatleri: {calendar_df['is_lunch_hour'].sum():,} rows\")\n",
+    "print(f\"Akşam piki saatleri: {calendar_df['is_peak_hour'].sum():,} rows\")\n",
+    "print(f\"Off-peak saatleri: {calendar_df['is_off_peak_hour'].sum():,} rows\")\n",
+    "print(f\"Shoulder saatleri: {calendar_df['is_shoulder_hour'].sum():,} rows\")\n",
+    "print(f\"Okul tatili günleri: {calendar_df['is_school_holiday'].sum():,} rows\")\n",
+    "print(f\"\\nHoliday öncesi günler: {calendar_df['before_holiday_1day'].sum():,} rows\")\n",
+    "print(f\"Holiday sonrası günler: {calendar_df['after_holiday_1day'].sum():,} rows\")\n",
+    "print(f\"Bridge günler: {calendar_df['is_bridge_day'].sum():,} rows\")\n",
+    "print(f\"Ödeme günleri: {calendar_df['is_payday'].sum():,} rows\")\n",
+    "print(f\"Yılbaşı dönemi: {calendar_df['christmas_period'].sum():,} rows\")\n",
+    "print(f\"20 Ağustos (Aziz Stephen): {calendar_df['natl_day_peak_20Aug'].sum():,} rows\")\n",
     "print(f\"\\nDay Type OHE:\")\n",
     "day_type_cols = [col for col in calendar_df.columns if 'day_type_OHE' in col]\n",
     "for col in day_type_cols:\n",
-    "    print(f\"  {col}: {calendar_df[col].sum():,} kayıt\")\n",
+    "    print(f\"  {col}: {calendar_df[col].sum():,} rows\")\n",
     "print(f\"\\nSeason OHE:\")\n",
     "season_cols = [col for col in calendar_df.columns if 'season_flag_OHE' in col]\n",
     "for col in season_cols:\n",
-    "    print(f\"  {col}: {calendar_df[col].sum():,} kayıt\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Takvim Verisini Kaydet"
+    "    print(f\"  {col}: {calendar_df[col].sum():,} rows\")"
    ]
   },
   {
@@ -323,10 +312,10 @@
     }
    ],
    "source": [
-    "# Takvim verisini kaydet\n",
+    "# Takvim datasini save\n",
     "generator.save_csv(calendar_df, \"../data/raw/hungary_calendar_2015_2024.csv\")\n",
     "\n",
-    "print(\"\\n✅ Takvim verisi kaydedildi!\")"
+    "print(\"\\n✅ Takvim datasi saved!\")"
    ]
   },
   {
