--- a/notebooks/entsoe_data_fetcher.ipynb
+++ b/notebooks/entsoe_data_fetcher.ipynb
@@ -4,16 +4,37 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# ENTSOE Data Fetcher - Hungary Load Data\n",
+    "# ENTSO-E Data Fetcher - Hungary Electricity Load Data\n",
     "\n",
-    "2015-2024 arası 15 dakikalık load verilerini çek ve CSV'ye kaydet.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Kütüphaneleri Import Et\n"
+    "## Overview\n",
+    "\n",
+    "This notebook fetches historical electricity load data for Hungary from the ENTSO-E (European Network of Transmission System Operators) API. The ENTSO-E platform provides publicly available electricity system data for European countries.\n",
+    "\n",
+    "### Data Details\n",
+    "\n",
+    "- **Country**: Hungary\n",
+    "- **Time Period**: 2015-2024\n",
+    "- **Temporal Resolution**: 15-minute intervals\n",
+    "- **Data Type**: Actual electricity load (consumption) in MW (Megawatts)\n",
+    "- **Timezone**: UTC (Coordinated Universal Time)\n",
+    "\n",
+    "### ENTSO-E API Information\n",
+    "\n",
+    "The ENTSO-E Transparency Platform provides:\n",
+    "- Historical load data\n",
+    "- Day-ahead load forecasts\n",
+    "- Generation data\n",
+    "- Transmission data\n",
+    "\n",
+    "For this project, we focus on actual load data (document type A65, process type A16) for Hungary's bidding zone.\n",
+    "\n",
+    "### Process\n",
+    "\n",
+    "1. Configure API connection (API key and bidding zone code)\n",
+    "2. Fetch data month by month (due to API limitations)\n",
+    "3. Parse XML responses and extract time series data\n",
+    "4. Handle timezone conversions\n",
+    "5. Save data to CSV format for further processing\n"
    ]
   },
   {
@@ -49,13 +70,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Data Fetcher'ı Başlat\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -74,13 +88,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Tarih Aralığını Ayarla\n"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -94,18 +101,11 @@
     }
    ],
    "source": [
-    "# Tarih aralığı\n",
+    "# Date range\n",
     "start_date = datetime(2015, 1, 1)\n",
     "end_date = datetime(2024, 12, 31)\n",
     "\n",
-    "print(f\"📅 Tarih aralığı: {start_date.date()} - {end_date.date()}\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Veriyi Çek\n"
+    "print(f\"📅 Date range: {start_date.date()} - {end_date.date()}\")\n"
    ]
   },
   {
@@ -1973,25 +1973,18 @@
     }
    ],
    "source": [
-    "# Veriyi çek (ay ay - hızlı)\n",
+    "# Veriyi fetch (ay ay - hızlı)\n",
     "df_raw = fetcher.fetch_range(start_date, end_date, show_progress=True)\n",
     "\n",
-    "# Reindex ve interpolasyon\n",
-    "print(\"\\n🔄 Eksik veriler tespit ediliyor ve dolduruluyor...\")\n",
+    "# Reindex ve interpolation\n",
+    "print(\"\\n🔄 Eksik dataler tespit ediliyor ve dolduruluyor...\")\n",
     "df, df_report = fetcher.reindex_and_fill(df_raw)\n",
     "\n",
     "if not df_report.empty:\n",
-    "    print(f\"\\n⚠️ {df_report['Veri_Noktasi_Sayisi'].sum():,} veri noktası interpolasyon ile dolduruldu\")\n",
-    "    print(f\"   {len(df_report)} eksik aralık bulundu\")\n",
+    "    print(f\"\\n⚠️ {df_report['Num_Points'].sum():,} data noktası interpolation ile dolduruldu\")\n",
+    "    print(f\"   {len(df_report)} missing aralık bulundu\")\n",
     "else:\n",
-    "    print(\"\\n✅ Hiç eksik veri yok!\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. CSV'ye Kaydet\n"
+    "    print(\"\\n✅ Hiç missing data yok!\")\n"
    ]
   },
   {
@@ -2021,27 +2014,20 @@
     }
    ],
    "source": [
-    "# CSV'ye kaydet\n",
+    "# CSV'ye save\n",
     "csv_filepath = project_root / \"data\" / \"raw\" / \"hungary_load_data_2015_2024.csv\"\n",
     "fetcher.save_csv(df, str(csv_filepath))\n",
     "\n",
-    "# Interpolasyon raporunu kaydet\n",
+    "# Interpolasyon reportnu save\n",
     "if not df_report.empty:\n",
     "    report_filepath = project_root / \"data\" / \"raw\" / \"interpolation_report.csv\"\n",
     "    fetcher.save_csv(df_report, str(report_filepath))\n",
-    "    print(f\"✅ Interpolasyon raporu kaydedildi: {report_filepath}\")\n",
+    "    print(f\"✅ Interpolasyon report saved: {report_filepath}\")\n",
     "\n",
     "print(f\"\\n📊 Özet:\")\n",
     "print(f\"   Kayıt sayısı: {len(df):,}\")\n",
     "print(f\"   Dosya: {csv_filepath}\")\n",
     "print(f\"   Boyut: {csv_filepath.stat().st_size / (1024*1024):.2f} MB\")\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. Veriyi Kontrol Et\n"
    ]
   },
   {
@@ -2074,10 +2060,10 @@
     }
    ],
    "source": [
-    "# İlk ve son kayıtlar\n",
-    "print(\"📋 İlk 5 kayıt:\")\n",
+    "# İlk ve son rowslar\n",
+    "print(\"📋 İlk 5 rows:\")\n",
     "print(df.head())\n",
-    "print(\"\\n📋 Son 5 kayıt:\")\n",
+    "print(\"\\n📋 Son 5 rows:\")\n",
     "print(df.tail())\n"
    ]
   }
