--- a/notebooks/weather_data_fetcher.ipynb
+++ b/notebooks/weather_data_fetcher.ipynb
@@ -4,9 +4,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Weather Data Fetcher - Hungary Temperature Data\n",
+    "# Weather Data Fetcher - Hungary Weather Data\n",
     "\n",
-    "Macaristan'ın en yoğun nüfuslu 5 şehrindeki sıcaklık verisini çeker, nüfusa göre ağırlıklı ortalama hesaplar ve HDD/CDD değerlerini üretir."
+    "## Overview\n",
+    "\n",
+    "This notebook fetches historical weather data for Hungary from the Open-Meteo API. Weather conditions, especially temperature, have a strong correlation with electricity demand due to heating and cooling requirements.\n",
+    "\n",
+    "### Data Details\n",
+    "\n",
+    "- **Data Source**: Open-Meteo Historical Weather API\n",
+    "- **Country**: Hungary (multiple cities for weighted average)\n",
+    "- **Time Period**: 2015-2024\n",
+    "- **Temporal Resolution**: Hourly or daily (aggregated as needed)\n",
+    "- **Variables**: Temperature, relative humidity, and other meteorological parameters\n",
+    "\n",
+    "### Weather Variables\n",
+    "\n",
+    "1. **Temperature**: Air temperature (2 meters above ground) - primary driver of heating/cooling demand\n",
+    "2. **HDD (Heating Degree Days)**: Measures coldness - indicates heating energy demand\n",
+    "   - HDD = max(0, T_base - T_actual), where T_base is typically 18°C\n",
+    "3. **CDD (Cooling Degree Days)**: Measures hotness - indicates cooling energy demand\n",
+    "   - CDD = max(0, T_actual - T_base), where T_base is typically 22°C\n",
+    "\n",
+    "### Importance for Load Forecasting\n",
+    "\n",
+    "Weather is one of the most important external factors for electricity load forecasting because:\n",
+    "- **Heating**: During cold weather, electricity demand increases for heating systems\n",
+    "- **Cooling**: During hot weather, electricity demand increases for air conditioning\n",
+    "- **Comfort**: People adjust their energy consumption based on weather conditions\n",
+    "\n",
+    "The relationship between temperature and electricity demand typically shows a U-shaped curve, with increased demand at both very cold and very hot temperatures.\n"
    ]
   },
   {
@@ -21,13 +48,6 @@
     "from weather_data_fetcher import WeatherDataFetcher\n",
     "from datetime import datetime\n",
     "import pandas as pd"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 1. Fetcher Oluştur"
    ]
   },
   {
@@ -51,17 +71,10 @@
    "source": [
     "fetcher = WeatherDataFetcher()\n",
     "\n",
-    "# Şehir bilgilerini göster\n",
-    "print(\"Şehirler ve Nüfusları:\")\n",
+    "# City bilgilerini göster\n",
+    "print(\"Cityler ve Nüfusları:\")\n",
     "for city, info in fetcher.CITIES.items():\n",
-    "    print(f\"  {city}: {info['population']:,} nüfus\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 2. Tarih Aralığını Belirle"
+    "    print(f\"  {city}: {info['population']:,} population\")"
    ]
   },
   {
@@ -73,22 +86,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Veri çekilecek tarih aralığı: 2015-01-01 - 2015-12-31\n"
+      "Veri çekilecek tarih aralığı: 2015-01-01 - 2024-12-31\n"
      ]
     }
    ],
    "source": [
     "start_date = datetime(2015, 1, 1)\n",
-    "end_date = datetime(2015, 12, 31)\n",
+    "end_date = datetime(2024, 12, 31)\n",
     "\n",
-    "print(f\"Veri çekilecek tarih aralığı: {start_date.date()} - {end_date.date()}\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 3. Sıcaklık Verisini Çek ve İşle"
+    "print(f\"Veri fetchilecek tarih aralığı: {start_date.date()} - {end_date.date()}\")"
    ]
   },
   {
@@ -110,14 +116,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:10,632 - INFO - ✓ Budapest: 8760 saatlik kayıt\n"
+      "2025-12-10 19:54:29,335 - INFO - ✓ Budapest: 87672 saatlik kayıt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ 8760 kayıt\n",
+      "✓ 87672 kayıt\n",
       "[2/5] Debrecen... "
      ]
     },
@@ -125,14 +131,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:15,740 - INFO - ✓ Debrecen: 8760 saatlik kayıt\n"
+      "2025-12-10 19:54:57,104 - INFO - ✓ Debrecen: 87672 saatlik kayıt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ 8760 kayıt\n",
+      "✓ 87672 kayıt\n",
       "[3/5] Szeged... "
      ]
     },
@@ -140,14 +146,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:20,769 - INFO - ✓ Szeged: 8760 saatlik kayıt\n"
+      "2025-12-10 19:55:15,733 - INFO - ✓ Szeged: 87672 saatlik kayıt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ 8760 kayıt\n",
+      "✓ 87672 kayıt\n",
       "[4/5] Miskolc... "
      ]
     },
@@ -155,14 +161,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:24,437 - INFO - ✓ Miskolc: 8760 saatlik kayıt\n"
+      "2025-12-10 19:55:34,981 - INFO - ✓ Miskolc: 87672 saatlik kayıt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ 8760 kayıt\n",
+      "✓ 87672 kayıt\n",
       "[5/5] Pecs... "
      ]
     },
@@ -170,14 +176,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:26,743 - INFO - ✓ Pecs: 8760 saatlik kayıt\n"
+      "2025-12-10 19:55:53,720 - INFO - ✓ Pecs: 87672 saatlik kayıt\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "✓ 8760 kayıt\n",
+      "✓ 87672 kayıt\n",
       "\n",
       "\n",
       "📊 Nüfusa göre ağırlıklı ortalama sıcaklık hesaplanıyor...\n"
@@ -187,7 +193,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:27,495 - INFO - Ağırlıklı ortalama hesaplandı: 8760 kayıt\n"
+      "2025-12-10 19:55:56,546 - INFO - Ağırlıklı ortalama hesaplandı: 87672 kayıt\n"
      ]
     },
     {
@@ -197,21 +203,14 @@
       "🔄 Saatlik veri 15 dakikalığa indiriliyor...\n",
       "\n",
       "✅ Sıcaklık verisi işlendi!\n",
-      "   Toplam kayıt sayısı: 35,040\n",
+      "   Toplam kayıt sayısı: 350,688\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Sadece sıcaklık verisini çek ve işle\n",
+    "# Sadece temperature datasini fetch ve işle\n",
     "temp_df, city_data = fetcher.fetch_and_process_temperature(start_date, end_date, show_progress=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 4. Sıcaklık Verisini İncele"
    ]
   },
   {
@@ -237,25 +236,18 @@
       "8 2015-01-01 02:00:00+00:00       -7.609167\n",
       "9 2015-01-01 02:15:00+00:00       -7.646250\n",
       "\n",
-      "Toplam kayıt sayısı: 35,040\n",
-      "Tarih aralığı: 2015-01-01 00:00:00+00:00 - 2015-12-31 23:45:00+00:00\n",
-      "Sıcaklık aralığı: -7.76°C - 35.43°C\n"
+      "Toplam kayıt sayısı: 350,688\n",
+      "Tarih aralığı: 2015-01-01 00:00:00+00:00 - 2024-12-31 23:45:00+00:00\n",
+      "Sıcaklık aralığı: -15.21°C - 37.50°C\n"
      ]
     }
    ],
    "source": [
     "print(\"\\n📊 Sıcaklık Verisi:\")\n",
     "print(temp_df.head(10))\n",
-    "print(f\"\\nToplam kayıt sayısı: {len(temp_df):,}\")\n",
-    "print(f\"Tarih aralığı: {temp_df['datetime'].min()} - {temp_df['datetime'].max()}\")\n",
+    "print(f\"\\nToplam rows sayısı: {len(temp_df):,}\")\n",
+    "print(f\"Date range: {temp_df['datetime'].min()} - {temp_df['datetime'].max()}\")\n",
     "print(f\"Sıcaklık aralığı: {temp_df['temperature_2m'].min():.2f}°C - {temp_df['temperature_2m'].max():.2f}°C\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 5. Sıcaklık Verisini Kaydet"
    ]
   },
   {
@@ -267,7 +259,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:27,628 - INFO - ✅ Veri kaydedildi: ../data/raw/hungary_temperature_2015_2024.csv\n"
+      "2025-12-10 19:55:57,704 - INFO - ✅ Veri kaydedildi: ../data/raw/hungary_temperature_2015_2024.csv\n"
      ]
     },
     {
@@ -280,17 +272,10 @@
     }
    ],
    "source": [
-    "# Sıcaklık verisini kaydet\n",
+    "# Sıcaklık datasini save\n",
     "fetcher.save_csv(temp_df, \"../data/raw/hungary_temperature_2015_2024.csv\")\n",
     "\n",
-    "print(\"\\n✅ Sıcaklık verisi kaydedildi!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 6. HDD/CDD Verisini Çek ve İşle"
+    "print(\"\\n✅ Sıcaklık datasi saved!\")"
    ]
   },
   {
@@ -302,9 +287,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:27,677 - INFO - calculate_daily_hdd_cdd: 365 günlük kayıt hesaplandı\n",
-      "2025-12-10 19:50:27,678 - INFO - Budapest: 365 günlük HDD/CDD hesaplandı\n",
-      "2025-12-10 19:50:27,684 - INFO - calculate_daily_hdd_cdd: 365 günlük kayıt hesaplandı\n"
+      "2025-12-10 19:55:57,918 - INFO - calculate_daily_hdd_cdd: 3653 günlük kayıt hesaplandı\n"
      ]
     },
     {
@@ -320,14 +303,16 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:27,685 - INFO - Debrecen: 365 günlük HDD/CDD hesaplandı\n",
-      "2025-12-10 19:50:27,692 - INFO - calculate_daily_hdd_cdd: 365 günlük kayıt hesaplandı\n",
-      "2025-12-10 19:50:27,692 - INFO - Szeged: 365 günlük HDD/CDD hesaplandı\n",
-      "2025-12-10 19:50:27,700 - INFO - calculate_daily_hdd_cdd: 365 günlük kayıt hesaplandı\n",
-      "2025-12-10 19:50:27,701 - INFO - Miskolc: 365 günlük HDD/CDD hesaplandı\n",
-      "2025-12-10 19:50:27,707 - INFO - calculate_daily_hdd_cdd: 365 günlük kayıt hesaplandı\n",
-      "2025-12-10 19:50:27,708 - INFO - Pecs: 365 günlük HDD/CDD hesaplandı\n",
-      "2025-12-10 19:50:27,725 - INFO - calculate_weighted_hdd_cdd: 365 günlük ağırlıklı HDD/CDD hesaplandı\n"
+      "2025-12-10 19:55:57,920 - INFO - Budapest: 3653 günlük HDD/CDD hesaplandı\n",
+      "2025-12-10 19:55:57,937 - INFO - calculate_daily_hdd_cdd: 3653 günlük kayıt hesaplandı\n",
+      "2025-12-10 19:55:57,938 - INFO - Debrecen: 3653 günlük HDD/CDD hesaplandı\n",
+      "2025-12-10 19:55:57,957 - INFO - calculate_daily_hdd_cdd: 3653 günlük kayıt hesaplandı\n",
+      "2025-12-10 19:55:57,957 - INFO - Szeged: 3653 günlük HDD/CDD hesaplandı\n",
+      "2025-12-10 19:55:57,973 - INFO - calculate_daily_hdd_cdd: 3653 günlük kayıt hesaplandı\n",
+      "2025-12-10 19:55:57,974 - INFO - Miskolc: 3653 günlük HDD/CDD hesaplandı\n",
+      "2025-12-10 19:55:57,991 - INFO - calculate_daily_hdd_cdd: 3653 günlük kayıt hesaplandı\n",
+      "2025-12-10 19:55:57,992 - INFO - Pecs: 3653 günlük HDD/CDD hesaplandı\n",
+      "2025-12-10 19:55:58,116 - INFO - calculate_weighted_hdd_cdd: 3653 günlük ağırlıklı HDD/CDD hesaplandı\n"
      ]
     },
     {
@@ -337,21 +322,14 @@
       "📅 Günlük HDD/CDD değerleri 15 dakikalığa genişletiliyor...\n",
       "\n",
       "✅ HDD/CDD verisi işlendi!\n",
-      "   Toplam kayıt sayısı: 35,040\n",
+      "   Toplam kayıt sayısı: 350,688\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "# Sadece HDD/CDD verisini çek ve işle\n",
+    "# Sadece HDD/CDD datasini fetch ve işle\n",
     "hdd_cdd_df = fetcher.fetch_and_process_hdd_cdd(start_date, end_date, city_data=city_data, show_progress=True)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 7. HDD/CDD Verisini İncele"
    ]
   },
   {
@@ -377,26 +355,26 @@
       "8 2015-01-01 02:00:00+00:00  22.056734  0.0\n",
       "9 2015-01-01 02:15:00+00:00  22.056734  0.0\n",
       "\n",
-      "Toplam kayıt sayısı: 35,040\n",
-      "Tarih aralığı: 2015-01-01 00:00:00+00:00 - 2015-12-31 23:45:00+00:00\n",
+      "Toplam kayıt sayısı: 350,688\n",
+      "Tarih aralığı: 2015-01-01 00:00:00+00:00 - 2024-12-31 23:45:00+00:00\n",
       "\n",
       "HDD istatistikleri:\n",
       "  Min: 0.00\n",
-      "  Max: 23.66\n",
-      "  Ortalama: 7.01\n",
+      "  Max: 29.87\n",
+      "  Ortalama: 7.00\n",
       "\n",
       "CDD istatistikleri:\n",
       "  Min: 0.00\n",
-      "  Max: 7.51\n",
-      "  Ortalama: 0.64\n"
+      "  Max: 8.57\n",
+      "  Ortalama: 0.47\n"
      ]
     }
    ],
    "source": [
     "print(\"\\n🌡️ HDD/CDD Verisi:\")\n",
     "print(hdd_cdd_df.head(10))\n",
-    "print(f\"\\nToplam kayıt sayısı: {len(hdd_cdd_df):,}\")\n",
-    "print(f\"Tarih aralığı: {hdd_cdd_df['datetime'].min()} - {hdd_cdd_df['datetime'].max()}\")\n",
+    "print(f\"\\nToplam rows sayısı: {len(hdd_cdd_df):,}\")\n",
+    "print(f\"Date range: {hdd_cdd_df['datetime'].min()} - {hdd_cdd_df['datetime'].max()}\")\n",
     "print(f\"\\nHDD istatistikleri:\")\n",
     "print(f\"  Min: {hdd_cdd_df['hdd'].min():.2f}\")\n",
     "print(f\"  Max: {hdd_cdd_df['hdd'].max():.2f}\")\n",
@@ -408,13 +386,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 8. HDD/CDD Verisini Kaydet"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
@@ -423,7 +394,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2025-12-10 19:50:36,668 - INFO - ✅ Veri kaydedildi: ../data/raw/hungary_hdd_cdd_2015_2024.csv\n"
+      "2025-12-10 19:56:00,280 - INFO - ✅ Veri kaydedildi: ../data/raw/hungary_hdd_cdd_2015_2024.csv\n"
      ]
     },
     {
@@ -436,52 +407,79 @@
     }
    ],
    "source": [
-    "# HDD/CDD verisini kaydet\n",
+    "# HDD/CDD datasini save\n",
     "fetcher.save_csv(hdd_cdd_df, \"../data/raw/hungary_hdd_cdd_2015_2024.csv\")\n",
     "\n",
-    "print(\"\\n✅ HDD/CDD verisi kaydedildi!\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 9. Temperature ve HDD/CDD Verilerini Birleştir"
+    "print(\"\\n✅ HDD/CDD datasi saved!\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "📊 Birleştirilmiş Weather Verisi:\n",
+      "                   datetime  temperature_2m        hdd  cdd\n",
+      "0 2015-01-01 00:00:00+00:00       -7.208750  22.056734  0.0\n",
+      "1 2015-01-01 00:15:00+00:00       -7.241354  22.056734  0.0\n",
+      "2 2015-01-01 00:30:00+00:00       -7.273958  22.056734  0.0\n",
+      "3 2015-01-01 00:45:00+00:00       -7.306563  22.056734  0.0\n",
+      "4 2015-01-01 01:00:00+00:00       -7.339167  22.056734  0.0\n",
+      "5 2015-01-01 01:15:00+00:00       -7.406667  22.056734  0.0\n",
+      "6 2015-01-01 01:30:00+00:00       -7.474167  22.056734  0.0\n",
+      "7 2015-01-01 01:45:00+00:00       -7.541667  22.056734  0.0\n",
+      "8 2015-01-01 02:00:00+00:00       -7.609167  22.056734  0.0\n",
+      "9 2015-01-01 02:15:00+00:00       -7.646250  22.056734  0.0\n",
+      "\n",
+      "Toplam kayıt sayısı: 350,688\n",
+      "Tarih aralığı: 2015-01-01 00:00:00+00:00 - 2024-12-31 23:45:00+00:00\n",
+      "\n",
+      "Sütunlar: ['datetime', 'temperature_2m', 'hdd', 'cdd']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Temperature ve HDD/CDD verilerini datetime üzerinden birleştir\n",
+    "# Temperature ve HDD/CDD datalerini datetime üzerinden merge\n",
     "weather_df = pd.merge(temp_df, hdd_cdd_df, on='datetime', how='inner')\n",
     "\n",
     "print('\\n📊 Birleştirilmiş Weather Verisi:')\n",
     "print(weather_df.head(10))\n",
-    "print(f'\\nToplam kayıt sayısı: {len(weather_df):,}')\n",
-    "print(f'Tarih aralığı: {weather_df[\"datetime\"].min()} - {weather_df[\"datetime\"].max()}')\n",
+    "print(f'\\nToplam rows sayısı: {len(weather_df):,}')\n",
+    "print(f'Date range: {weather_df[\"datetime\"].min()} - {weather_df[\"datetime\"].max()}')\n",
     "print(f'\\nSütunlar: {list(weather_df.columns)}')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## 10. Birleştirilmiş Weather Verisini Kaydet"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2025-12-10 19:56:41,423 - INFO - ✅ Veri kaydedildi: ../data/raw/hungary_weather_2015_2024.csv\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "✅ Birleştirilmiş weather verisi kaydedildi!\n"
+     ]
+    }
+   ],
    "source": [
-    "# Birleştirilmiş veriyi kaydet\n",
+    "# Birleştirilmiş datayi save\n",
     "fetcher.save_csv(weather_df, '../data/raw/hungary_weather_2015_2024.csv')\n",
     "\n",
-    "print('\\n✅ Birleştirilmiş weather verisi kaydedildi!')"
+    "print('\\n✅ Birleştirilmiş weather datasi saved!')"
    ]
   }
  ],
